Use CMAKE_CURRENT_SOURCE_DIR
Otherwise if a project embeds this library, it tries to find JSONTestSuite
in its top level CMakeLists.txt directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ if (JSON_CPP_BUILD_TESTS)
     add_custom_command(
         TARGET jsontestsuite_test POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
-            ${CMAKE_SOURCE_DIR}/JSONTestSuite
+            ${CMAKE_CURRENT_SOURCE_DIR}/JSONTestSuite
             ${CMAKE_CURRENT_BINARY_DIR}/JSONTestSuite
     )
 
