--- a/json.cpp.pc.in
+++ b/json.cpp.pc.in
@@ -6,3 +6,4 @@ Name: json.cpp
 Description: @CMAKE_PROJECT_DESCRIPTION@
 Libs: -L${libdir} -ljson
 Cflags: -I${includedir}
+Requires.private: double-conversion
